<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_welcome"
        android:textColor="@color/teal_700" />

    <EditText
        android:id="@+id/edit_text_greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/hint_text"
        android:gravity="center"
        android:hint="@string/hint_text"
        android:inputType="textLongMessage"
        android:textColorHint="@color/cardview_shadow_start_color" />
    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/cardview_shadow_start_color" />
    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:textColorHint="@color/cardview_shadow_start_color" />
    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hint_number"
        android:inputType="numberDecimal"
        android:textColorHint="@color/cardview_shadow_start_color" />
    <EditText
        android:id="@+id/edit_text_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/cardview_shadow_start_color" />
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/cardview_shadow_start_color" />
    <EditText
        android:id="@+id/edit_text_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hint_smth"
        android:inputType="textShortMessage"
        android:textColorHint="@color/cardview_shadow_start_color" />


</LinearLayout>